--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="btext">
-      <a href="https://drive.google.com/open?id=1vhyDpEaC-53vRz5gFqdfbWdVlIS5Ngnw"class="btn">Resume</a>
+      <a href="https://docs.google.com/document/d/12A2BPl74PG7FAPYJv1occjRYmkfKbGTLy-CxT5YAemc/edit?usp=sharing"class="btn">Resume</a>
   </div>
 </body>
 </html>
