--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="btext">
-      <a href="https://docs.google.com/document/d/12A2BPl74PG7FAPYJv1occjRYmkfKbGTLy-CxT5YAemc/edit?usp=sharing"class="btn">Resume</a>
+      <a href="https://drive.google.com/file/d/1EPOKqZie7n_R-5dmCGK-1eolv397N-92/view?usp=sharing" class="btn">Resume</a>
   </div>
 </body>
 </html>
