--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="intro">
         <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Ankit Sahu&nbsp</h2>
           <hr style="width: 30%; background-color: rgb(179, 105, 114); border-color: #E83951;">
-      <a href="https://www.linkedin.com/in/sahuankit010/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
+      <a href="https://www.linkedin.com/in/humbleguy/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
       &nbsp
       <a href="https://github.com/sahuankit010" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
       &nbsp
