--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="shortcut icon" href="img/logo.jpg" type="jpg">
+<link rel="shortcut icon" href="logo.jpg" type="jpg">
   <title>Ankit Sahu</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" type="text/css">
-  <style type="text/css">body{background-image: url("img/image1.jpg");}</style>
+  <style type="text/css">body{background-image: url("image1.jpg");}</style>
   <link href='https://fonts.googleapis.com/css?family=Raleway:200,400,800' rel='stylesheet' type='text/css'>
   
 </head>
 <body>
 <div id="particles-js"></div>
-<script type="text/javascript" src="js/particles.js"></script>
-<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="particles.js"></script>
+<script type="text/javascript" src="app.js"></script>
 
 <div id="particles">
     <div id="intro">
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="btext">
-      <a href="https://drive.google.com/file/d/1eMlFnWE2sKTdLILiNSUqZyBz-yDO4d7h/view?usp=sharing" class="btn">Resume</a>
+      <a href="https://drive.google.com/file/d/1opXA6LtpruTfOU1fiNR_Zo-Co7y7p1rR/view?usp=sharing" class="btn">Resume</a>
   </div>
 </body>
 </html>
