--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="btext">
-      <a href="https://drive.google.com/file/d/1D47uU9ijNBUxCWJ1A2FT6umCKJ8oM6FM/view?usp=drive_link" class="btn">Resume</a>
+      <a href="https://drive.google.com/file/d/1IV5ti8eXOAz0LyHXup0YfSZw875VnNpo/view?usp=sharing" class="btn">Resume</a>
   </div>
 </body>
 </html>
